[gd_scene load_steps=13 format=3 uid="uid://bgod5pyugdjn"]

[ext_resource type="Script" path="res://assets/ui/main_menu/main_menu.gd" id="1_1ihm4"]
[ext_resource type="PackedScene" uid="uid://d0gw6cbir28d3" path="res://assets/levels/tutorial_level/tutorial_level.tscn" id="2_3dh6f"]
[ext_resource type="Texture2D" uid="uid://cdl2mva1ibxdu" path="res://textures/main-menu/logo.png" id="2_8ilsw"]
[ext_resource type="Theme" uid="uid://dygspx1ouf0ul" path="res://assets/ui/main_menu/main_menu.tres" id="3_6h6dh"]
[ext_resource type="Texture2D" uid="uid://bt6mke8k7uhgg" path="res://textures/main-menu/MenuBackground.jpg" id="4_hvcef"]
[ext_resource type="PackedScene" uid="uid://xhjx4f7178cn" path="res://assets/ui/main_menu/save_slot.tscn" id="5_rj1ys"]
[ext_resource type="PackedScene" uid="uid://b8kl60fulqq1u" path="res://assets/player/player.tscn" id="6_3b3xo"]
[ext_resource type="PackedScene" uid="uid://c4bbjae7r4w7y" path="res://assets/levels/level_tools/player_spawnpoint.tscn" id="6_rucww"]
[ext_resource type="TileSet" uid="uid://bbjbjit1n1gwi" path="res://textures/tileset/128x.tres" id="7_cm3tx"]
[ext_resource type="AudioStream" uid="uid://cg74k4rxcyj87" path="res://assets/ui/skill_tree/select_click.mp3" id="10_dsytu"]
[ext_resource type="AudioStream" uid="uid://ecwyoyf7u4qs" path="res://assets/ui/menu_hover.wav" id="10_r3chd"]

[sub_resource type="Environment" id="Environment_ugoqb"]
background_mode = 3
ambient_light_source = 1
ambient_light_energy = 4.2
reflected_light_source = 1
tonemap_mode = 3
glow_enabled = true
glow_levels/2 = 1.0
glow_levels/3 = 0.0
glow_levels/4 = 1.0
glow_levels/5 = 0.0
glow_levels/6 = 1.0
glow_intensity = 0.4
glow_bloom = 0.1
glow_blend_mode = 1
glow_hdr_threshold = 1.5
glow_hdr_scale = 0.0

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ihm4")
first_level = ExtResource("2_3dh6f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 17

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 72

[node name="title" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 243.365)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_8ilsw")
expand_mode = 3
stretch_mode = 5

[node name="main_screen" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 17

[node name="new_game" type="Button" parent="MarginContainer/VBoxContainer/main_screen"]
texture_filter = 1
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
focus_neighbor_top = NodePath("../exit")
theme = ExtResource("3_6h6dh")
theme_override_font_sizes/font_size = 70
text = "new game"

[node name="continue" type="Button" parent="MarginContainer/VBoxContainer/main_screen"]
texture_filter = 1
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_6h6dh")
theme_override_font_sizes/font_size = 70
text = "continue"
flat = true
icon_alignment = 1
expand_icon = true

[node name="settings" type="Button" parent="MarginContainer/VBoxContainer/main_screen"]
texture_filter = 1
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_6h6dh")
theme_override_font_sizes/font_size = 70
text = "settings"
flat = true
icon_alignment = 1
expand_icon = true

[node name="exit" type="Button" parent="MarginContainer/VBoxContainer/main_screen"]
texture_filter = 1
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../new_game")
theme = ExtResource("3_6h6dh")
theme_override_font_sizes/font_size = 70
text = "exit"
flat = true
icon_alignment = 1
expand_icon = true

[node name="load_screen" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/load_screen"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_6h6dh")
bbcode_enabled = true
text = "[center]Load Save[/center]"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/load_screen"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="save_1" parent="MarginContainer/VBoxContainer/load_screen/HBoxContainer" instance=ExtResource("5_rj1ys")]
layout_mode = 2
text = "save 1"
file_index = "1"

[node name="save_2" parent="MarginContainer/VBoxContainer/load_screen/HBoxContainer" instance=ExtResource("5_rj1ys")]
layout_mode = 2
text = "save 2"
file_index = "2"

[node name="save_3" parent="MarginContainer/VBoxContainer/load_screen/HBoxContainer" instance=ExtResource("5_rj1ys")]
layout_mode = 2
text = "save 3"
file_index = "3"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/load_screen"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_6h6dh")
text = "back"

[node name="new_game_screen" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/new_game_screen"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_6h6dh")
bbcode_enabled = true
text = "[center]Select Save Slot[/center]"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/new_game_screen"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="save_1" parent="MarginContainer/VBoxContainer/new_game_screen/HBoxContainer" instance=ExtResource("5_rj1ys")]
layout_mode = 2
text = "save 1"
file_index = "1"

[node name="save_2" parent="MarginContainer/VBoxContainer/new_game_screen/HBoxContainer" instance=ExtResource("5_rj1ys")]
layout_mode = 2
text = "save 2"
file_index = "2"

[node name="save_3" parent="MarginContainer/VBoxContainer/new_game_screen/HBoxContainer" instance=ExtResource("5_rj1ys")]
layout_mode = 2
text = "save 3"
file_index = "3"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/new_game_screen"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_6h6dh")
text = "back"

[node name="settings_screen" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/settings_screen"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_6h6dh")
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 30
columns = 4

[node name="Master" type="Label" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("3_6h6dh")
theme_override_font_sizes/font_size = 35
text = "Master volume"
horizontal_alignment = 2

[node name="Master_slider" type="HSlider" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = -60.0
max_value = 6.0
step = 0.1

[node name="Vsync" type="Label" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_6h6dh")
theme_override_font_sizes/font_size = 35
text = "Vsync"
horizontal_alignment = 2

[node name="Vsync_checkbox" type="CheckButton" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Gameplay" type="Label" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("3_6h6dh")
theme_override_font_sizes/font_size = 35
text = "Gameplay volume"
horizontal_alignment = 2

[node name="Gameplay_slider" type="HSlider" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
min_value = -60.0
max_value = 6.0
step = 0.1

[node name="Display" type="Label" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_6h6dh")
theme_override_font_sizes/font_size = 35
text = "Display mode"
horizontal_alignment = 2

[node name="Display_dropdown" type="OptionButton" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1
popup/item_2/text = "Borderless"
popup/item_2/id = 2

[node name="Menu" type="Label" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("3_6h6dh")
theme_override_font_sizes/font_size = 35
text = "Menu volume"
horizontal_alignment = 2

[node name="Menu_slider" type="HSlider" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 4
min_value = -60.0
max_value = 6.0
step = 0.1

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_6h6dh")
text = "Save"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/settings_screen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_6h6dh")
text = "back"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_hvcef")
expand_mode = 1
stretch_mode = 6

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(1.16, 1.16)
tile_set = ExtResource("7_cm3tx")
format = 2
layer_0/tile_data = PackedInt32Array(393213, 1, 65536, 327677, 1, 65536, 262141, 1, 65536, 196605, 1, 65536, 327696, 1, 65536, 262160, 1, 65536, 196624, 1, 65536, 131088, 1, 65536, 458749, 3, 0, 458750, 3, 0, 458751, 3, 0, 393216, 3, 0, 393217, 3, 0, 393218, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393219, 3, 0, 393225, 3, 0, 524285, 196611, 0, 524286, 196611, 0, 524287, 196611, 0, 458752, 196611, 0, 458753, 196611, 0, 458754, 196611, 0, 458762, 196611, 0, 458763, 196611, 0, 458764, 196611, 0, 458765, 196611, 0, 458766, 196611, 0, 458767, 196611, 0, 458768, 196611, 0, 393220, 65539, 1, 393224, 3, 1, 458755, 196611, 0, 458761, 196611, 0)

[node name="player_spawnpoint" parent="." instance=ExtResource("6_rucww")]
position = Vector2(-190, 819)
scale = Vector2(12.43, 12.43)

[node name="player" parent="." instance=ExtResource("6_3b3xo")]
scale = Vector2(7, 7)
speed = 900.0
acceleration = 60.0
jump_height = 300.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ugoqb")

[node name="select_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_dsytu")
volume_db = -10.0
bus = &"Menu"

[node name="hover_tick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_r3chd")
max_polyphony = 3
bus = &"Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/main_screen/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/main_screen/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/main_screen/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/main_screen/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/load_screen/Button" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/new_game_screen/Button" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer/Master_slider" to="." method="_on_master_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer/Vsync_checkbox" to="." method="_on_vsync_checkbox_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer/Gameplay_slider" to="." method="_on_gameplay_slider_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer/Display_dropdown" to="." method="_on_display_dropdown_item_selected"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/GridContainer/Menu_slider" to="." method="_on_menu_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/settings_screen/VBoxContainer/Back" to="." method="_on_back_pressed"]
